# project-carbon

./: .editorconfig  .gitattributes  .gitignore  0  CARBON Z80 PINOUT.docx  CHANGELOG.md  JC_Bus_Pinout.odt  Makefile  MiniDTX_ISA.kicad_pcb  README.md  carbon_bus_pinouts.odt  dATX_ISA.kicad_prl  dATX_ISA.kicad_pro  dATX_JC.kicad_pro  dATX_JC100.kicad_pcb  dATX_JC100.kicad_pro  dATX_JC64.kicad_pcb  dATX_JC64.kicad_pro  fp-info-cache  ~$_Bus_Pinout.odt  ~$rbon_bus_pinouts.odt  ~dATX_JC64.kicad_pcb.lck
.github/workflows/: ci.yml
docs/: ACCEL_FABRIC.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCH_CONTRACTS.md  CARBONDMA.md  CARBONIO.md  COMPAT_LADDERS.md  CONTRACTS.md  DEFERRED.md  DEPENDENCIES.md  DETERMINISM.md  DEVICES_OVERVIEW.md  DEVICE_MODEL.md  DEVICE_MODEL_COMPAT_TURBO.md  EE.md  EE_ARCHITECTURE.md  FIRMWARE_ARCHITECTURE.md  HARDWARE_ARCHITECTURE.md  JC-BIOS_ARCHITECTURE.md  JC-DOS_ARCHITECTURE.md  LEGACY_SUPPORT.md  OS_ARCHITECTURE.md  PAL.md  PAL_ARCHITECTURE.md  README.md  RELEASE_v1.md  SPEC_BDT.md  SPEC_CAI.md  SPEC_CAPSET.md  SPEC_CONFORMANCE.md  SPEC_CPU_Z380.md  SPEC_CPU_Z480.md  SPEC_CPU_Z85.md  SPEC_CPU_Z90.md  SPEC_DEV_PIC.md  SPEC_DEV_STORAGE_IDEPIO.md  SPEC_DEV_TIMER.md  SPEC_DEV_UART.md  SPEC_DISCOVERY.md  SPEC_EE.md  (+24 more)
docs/cpu/: Z380.md  Z480.md  Z480_ISA.md  Z85.md  Z90.md
docs/fpu/: Am9513.md  Am9514.md  Am9515.md  Am95xx.md  Am95xx_NUMERIC_POLICY.md  Am95xx_QUEUE_MODEL.md  NUMERIC_POLICY.md
docs/memory/: Memory Map.xlsx
docs/pinouts/: JC_Bus_Pinout.odt
docs/platform/: BDT_BSP.md  CAI.md  CPU_FPU_BOUNDARY.md  FABRIC.md  PROFILES.md  SYSTEM_MEMORY_MAPS.md  TIER_HOSTING.md  Z380_PLATFORM.md
hardware/interrupts/: Interrupt List.rtf
hdl/: .gitignore  README.md
hdl/common/: README.md
hdl/sim/: Makefile  README.md
hdl/spec/: bdt.yaml  bdt_schema.yaml  cai.yaml  csr_map.yaml  device_model.yaml  discovery.yaml  external_if.yaml  fabric.yaml  formats.yaml  interfaces.yaml  isa_z90.yaml  memory_attrs.yaml  mode_switch.yaml  profiles.yaml  tiers.yaml  topology.yaml
hdl/tools/: README.md  gen_specs.py
manual/: Carbon_Manual.odt  ~$rbon_Manual.odt
schem/Carbon_Z80/: Carbon_Z80.kicad_pro  Carbon_Z80.kicad_sch  report.txt
schem/Model_150/: Model_150.kicad_pcb  Model_150.kicad_prl  Model_150.kicad_pro  (+5 more)
schematics/: #auto_saved_files#  dATX_JC100.kicad_pcb  dATX_JC100.kicad_pro  dATX_JC100.kicad_sch
scripts/: check_consistency.sh  gen_arch.ps1  gen_arch.sh  gen_bdt.ps1  gen_bdt.sh  gen_kicad.ps1  gen_kicad.sh  release_gate_v1_0.sh  run_os_boot.sh  run_sim.ps1  run_sim.sh  spec_hash.py
source/sim/carbon_sim/: CMakeLists.txt
source/sim/carbon_sim/docs/: PLATFORMS.md  USAGE.md
source/sim/carbon_sim/include/carbon_sim/: bus.h  sim_config.h
source/sim/carbon_sim/include/carbon_sim/cpu/: z80.h
source/sim/carbon_sim/include/carbon_sim/devices/: block_disk.h  boot_rom.h  caps.h  carbon_mmio.h  carbondma.h  carbonio.h  cpm_disk.h  ide_disk.h  interrupt_controller.h  tier_host_stub.h  timer_tick.h  uart_console.h  zilog_sio.h
source/sim/carbon_sim/include/carbon_sim/rtl/: verilator_backend.h
source/sim/carbon_sim/include/carbon_sim/util/: bdt_builder.h  bsp_loader.h  carbon_constants.h  file.h  mem_loader.h
source/sim/carbon_sim/roms/: README.md
source/sim/carbon_sim/src/: bdt_builder.cpp  block_disk.cpp  boot_rom.cpp  bsp_loader.cpp  caps.cpp  carbon_mmio.cpp  carbondma.cpp  carbonio.cpp  cpm_disk.cpp  ide_disk.cpp  interrupt_controller.cpp  main.cpp  mem_loader.cpp  platform_carbonz.cpp  platform_cpm22.cpp  platform_romwbw.cpp  tier_host_stub.cpp  timer_tick.cpp  uart_console.cpp  verilator_backend.cpp  z80.cpp  zilog_sio.cpp
source/sim/carbon_sim/tests/: smoke.cpp
tmp/: out_q.txt
tools/: gen_bdt.py  mk_disk.py
(+733 files in other folders)
